[gd_scene load_steps=13 format=3 uid="uid://uf1b2n01kkkq"]

[ext_resource type="Script" path="res://scripts/debug/free_look_camera.gd" id="1_6prdx"]
[ext_resource type="Script" path="res://scripts/debug/test_script.gd" id="2_w5bob"]
[ext_resource type="Script" path="res://scripts/debug/debug_input_manager.gd" id="3_ykuo2"]
[ext_resource type="VoxelGeneratorNoise2D" uid="uid://cmn4p28tu8q5l" path="res://assets/noise2d_generator.tres" id="4_la6j5"]
[ext_resource type="VoxelMesherTransvoxel" uid="uid://b4aepuy1nhq55" path="res://assets/original_mesher.tres" id="5_ey6rv"]
[ext_resource type="Shader" path="res://assets/original_shader.gdshader" id="6_ri3qd"]
[ext_resource type="Script" path="res://scripts/water_simulation_manager.gd" id="7_ymjgv"]
[ext_resource type="Script" path="res://scripts/terrain.gd" id="8_70qrb"]
[ext_resource type="Script" path="res://scripts/debug/water.gd" id="8_ol8om"]
[ext_resource type="Texture2D" uid="uid://bw6nmqyqav3oh" path="res://assets/2d_handle.png" id="9_2cyn3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4xaoo"]
render_priority = 0
shader = ExtResource("6_ri3qd")
shader_parameter/u_transition_mask = null
shader_parameter/albedo_color = Color(0.152941, 0.482353, 0.372549, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pcwu4"]
transparency = 1
albedo_color = Color(0.427451, 0.360784, 0.835294, 0.784314)

[node name="world" type="Node"]

[node name="camera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 16.1849, 0)
script = ExtResource("1_6prdx")
sensitivity = 1.5
default_velocity = 30.0
boost_speed_multiplier = 15.0

[node name="voxel_viewer" type="VoxelViewer" parent="camera"]
view_distance = 4906

[node name="test_node" type="Node3D" parent="camera" node_paths=PackedStringArray("terrain", "water", "camera")]
script = ExtResource("2_w5bob")
terrain = NodePath("../../water_simulation/terrain")
water = NodePath("../../water_simulation/water")
camera = NodePath("..")

[node name="directional_light" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.813963, 0.580916, 0, -0.580916, 0.813963, 0, 2.19105, 0)

[node name="debug_input_manager" type="Node" parent="." node_paths=PackedStringArray("water_simulation_manager")]
script = ExtResource("3_ykuo2")
water_simulation_manager = NodePath("../water_simulation_manager")

[node name="water_simulation_manager" type="Node" parent="." node_paths=PackedStringArray("water_simulation")]
script = ExtResource("7_ymjgv")
water_simulation = NodePath("../water_simulation")
auto_create_domain = true
debug_draw_domains = true

[node name="water_simulation" type="WaterSimulation" parent="."]
terrain = NodePath("terrain")
water = NodePath("water")
simulation_timestep_msec = 1000

[node name="terrain" type="VoxelTerrain" parent="water_simulation"]
generator = ExtResource("4_la6j5")
mesher = ExtResource("5_ey6rv")
bounds = AABB(-96, -16, -96, 192, 112, 192)
material_override = SubResource("ShaderMaterial_4xaoo")
script = ExtResource("8_70qrb")

[node name="water" type="VoxelTerrain" parent="water_simulation" node_paths=PackedStringArray("terrain")]
mesher = ExtResource("5_ey6rv")
bounds = AABB(-96, -16, -96, 192, 112, 192)
generate_collisions = false
material_override = SubResource("StandardMaterial3D_pcwu4")
script = ExtResource("8_ol8om")
terrain = NodePath("../terrain")
draw = true

[node name="control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="center_container" type="CenterContainer" parent="control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="margin_container" type="MarginContainer" parent="control/center_container"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16

[node name="texture" type="TextureRect" parent="control/center_container/margin_container"]
layout_mode = 2
texture = ExtResource("9_2cyn3")

[node name="water_simulation_controls" type="Control" parent="control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="h_box_container" type="HBoxContainer" parent="control/water_simulation_controls"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.5
offset_right = 64.5
offset_bottom = 40.0
grow_horizontal = 2

[node name="pause" type="Button" parent="control/water_simulation_controls/h_box_container"]
layout_mode = 2
text = "Pause"

[node name="resume" type="Button" parent="control/water_simulation_controls/h_box_container"]
layout_mode = 2
text = "Resume"

[connection signal="pressed" from="control/water_simulation_controls/h_box_container/pause" to="water_simulation_manager" method="pause_simulation"]
[connection signal="pressed" from="control/water_simulation_controls/h_box_container/resume" to="water_simulation_manager" method="resume_simulation"]
